assets/main.scss
---
---

@import "{{ site.theme }}";

body {
  min-width: 320px;
}

html, body {
  max-width: 100vw;
  overflow-x: auto;
  margin: 0;
}

.material-icons {
  margin-right: 0.4rem;
  vertical-align: middle;
}

.site-logo {
  width: 250px;
  height: auto;
}

.form-control {
  border: 1px solid #003534 !important;
}
/* ... */

